--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
+# ignore the build directories
+build
+out
+.vs
