--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,58 @@
-﻿cmake_minimum_required(VERSION 2.9) # CMake quits without it
+﻿#----------------------------------------------------------------------------
+# Setup the project
+cmake_minimum_required(VERSION 3.16...3.21)
+project(photon-dose-sim)
 
-project(photon-dose-sim) # project name
+#----------------------------------------------------------------------------
+# Find Geant4 package, activating all available UI and Vis drivers by default
+# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
+# to build a batch mode only executable
+#
+option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
+if(WITH_GEANT4_UIVIS)
+  find_package(Geant4 REQUIRED ui_all vis_all)
+else()
+  find_package(Geant4 REQUIRED)
+endif()
 
-find_package(Geant4 REQUIRED ui_all vis_all) # search for Geant4Config.cmake
-include(${Geant4_USE_FILE}) # Linux cannot find Geant4 header files without it
-add_executable(photon-dose-sim photon-dose-sim.cpp)
+#----------------------------------------------------------------------------
+# Setup Geant4 include directories and compile definitions
+# Setup include directory for this project
+#
+include(${Geant4_USE_FILE})
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+#----------------------------------------------------------------------------
+# Locate sources and headers for this project
+# NB: headers are included so they will show up in IDEs
+#
+file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
+file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
+
+#----------------------------------------------------------------------------
+# Add the executable, and link it to the Geant4 libraries
+#
+add_executable(photon-dose-sim photon-dose-sim.cc ${sources} ${headers})
 target_link_libraries(photon-dose-sim ${Geant4_LIBRARIES})
+
+#----------------------------------------------------------------------------
+# Copy all scripts to the build directory, i.e. the directory in which we
+# build B1. This is so that we can run the executable directly because it
+# relies on these scripts being in the current working directory.
+#
+set(PHOTON-DOSE-SIM_SCRIPTS
+  init_vis.mac
+  vis.mac
+  )
+
+foreach(_script ${PHOTON-DOSE-SIM_SCRIPTS})
+  configure_file(
+    ${PROJECT_SOURCE_DIR}/mac_files/${_script}
+    ${PROJECT_BINARY_DIR}/${_script}
+    COPYONLY
+    )
+endforeach()
+
 
 if(WIN32)
   # remove Debug and other unnecessary configurations
